# near-nfticket

./: README.md  package.json
contract/: Cargo.toml  README.md
contract/src/: helper.rs  lib.rs  qr.rs  web4.rs
contract/src/design/: index.html  mint.html  token.html
src/: App.js  config.js  near-verify.js
